# yclients-mcp-server

./: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  timeweb-app.yaml
.github/workflows/: deploy.yml
deploy/: nginx-ycmcp.conf
src/yclients_mcp/: __init__.py  client.py  config.py  server.py
src/yclients_mcp/tools/: __init__.py  analytics.py  booking.py  clients.py  companies.py  records.py  schedule.py  services.py  staff.py
